--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ rsa
 scipy
 six==1.15.0
 tensorboard
-tensorflow==2.1.0
+tensorflow-cpu==2.1.0
 tensorflow-estimator==2.1.0
 termcolor==1.1.0
 urllib3
