--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Markdown
 MarkupSafe
+mkl-random==1.1.1
+mkl-service==2.3.0
 multidict
 oauthlib==3.1.0
 olefile==0.46
@@ -45,10 +47,11 @@ rsa
 scipy
 six==1.15.0
 tensorboard
+tensorboard-plugin-wit
+tensorflow-estimator
 tensorflow-cpu
 numpy==1.16.0
 gast==0.3.3
-tensorflow-estimator
 termcolor==1.1.0
 urllib3
 Werkzeug==0.16.1
